[project]
name = "clone-hero-tools"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "mido>=1.3.3",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# E/W = pycodestyle errors/warnings, F = pyflakes, I = isort, UP = pyupgrade
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line-too-long — Black handles this
]

[tool.ruff.lint.isort]
known-first-party = ["ch_chart_fix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"
